--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -2707,3 +2707,476 @@ keywords = "Survey "
  address = {New York, NY, USA},
  keywords = {social learning, visualization},
 }
+
+@article{Ingalls1981,
+  title = {Design Principles Behind Smalltalk},
+  journal = "Byte Magazine",
+  volume = "6",
+  number = "8",
+  pages = "286--298",
+  year = "1981",
+  author = "Daniel H. H. Ingalls",
+}
+
+@inproceedings{Lieber2014,
+ author = {Lieber, Tom and Brandt, Joel R. and Miller, Rob C.},
+ title = {Addressing Misconceptions About Code with Always-on Programming Visualizations},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '14},
+ year = {2014},
+ isbn = {978-1-4503-2473-1},
+ location = {Toronto, Ontario, Canada},
+ pages = {2481--2490},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2556288.2557409},
+ doi = {10.1145/2556288.2557409},
+ acmid = {2557409},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {code understanding, debugging, programming},
+}
+
+@inproceedings{Sorva2010,
+ author = {Sorva, Juha and Sirki\"{a}, Teemu},
+ title = {UUhistle: A Software Tool for Visual Program Simulation},
+ booktitle = {Proceedings of the 10th Koli Calling International Conference on Computing Education Research},
+ series = {Koli Calling '10},
+ year = {2010},
+ isbn = {978-1-4503-0520-4},
+ location = {Koli, Finland},
+ pages = {49--54},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1930464.1930471},
+ doi = {10.1145/1930464.1930471},
+ acmid = {1930471},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {UUhistle, automatic assessment, engagement, introductory programming, notional machine, program dynamics, program visualization, visual program simulation},
+}
+
+@inproceedings{Moreno2004,
+ author = {Moreno, Andr{\'e}s and Myller, Niko and Sutinen, Erkki and Ben-Ari, Mordechai},
+ title = {Visualizing Programs with Jeliot 3},
+ booktitle = {Proceedings of the Working Conference on Advanced Visual Interfaces},
+ series = {AVI '04},
+ year = {2004},
+ isbn = {1-58113-867-9},
+ location = {Gallipoli, Italy},
+ pages = {373--376},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/989863.989928},
+ doi = {10.1145/989863.989928},
+ acmid = {989928},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {novice programming, program visualization},
+}
+
+
+@inproceedings{Ko2008,
+ author = {Ko, Andrew J. and Myers, Brad A.},
+ title = {Debugging Reinvented: Asking and Answering Why and Why Not Questions About Program Behavior},
+ booktitle = {Proceedings of the 30th International Conference on Software Engineering},
+ series = {ICSE '08},
+ year = {2008},
+ isbn = {978-1-60558-079-1},
+ location = {Leipzig, Germany},
+ pages = {301--310},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1368088.1368130},
+ doi = {10.1145/1368088.1368130},
+ acmid = {1368130},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {whyline},
+}
+
+@misc{Victor2012,
+  author = {Bret Victor},
+  title = {Learnable Programming: Designing a programming system for understanding programs},
+  howpublished = {\url{http://worrydream.com/LearnableProgramming/}},
+  year = 2012,
+  month = Sep,
+}
+
+@article{Heer2012,
+ author = {Heer, Jeffrey and Shneiderman, Ben},
+ title = {Interactive Dynamics for Visual Analysis},
+ journal = {Commun. ACM},
+ issue_date = {April 2012},
+ volume = {55},
+ number = {4},
+ month = apr,
+ year = {2012},
+ issn = {0001-0782},
+ pages = {45--54},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2133806.2133821},
+ doi = {10.1145/2133806.2133821},
+ acmid = {2133821},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{Heer2010,
+ author = {Heer, Jeffrey and Bostock, Michael and Ogievetsky, Vadim},
+ title = {A Tour Through the Visualization Zoo},
+ journal = {Commun. ACM},
+ issue_date = {June 2010},
+ volume = {53},
+ number = {6},
+ month = jun,
+ year = {2010},
+ issn = {0001-0782},
+ pages = {59--67},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/1743546.1743567},
+ doi = {10.1145/1743546.1743567},
+ acmid = {1743567},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@inproceedings{Nelson2017,
+ author = {Nelson, Greg and Xie, Benjamin and Ko, Andrew J.},
+ title = {Comprehension First: Evaluating a Novel Pedagogy and Tutoring System
+ for Program Tracing in CS1},
+ booktitle = {Proceedings of the 2017 International Conference on International Computing Education Research},
+ series = {ICER '17},
+ year = {2017},
+ location = {Tacoma, Washington, USA},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{Hundhausen2007,
+  title = {What You See Is What You Code: A ``live" algorithm development and visualization environment for novice learners},
+  journal = "Journal of Visual Languages \& Computing",
+  volume = "18",
+  number = "1",
+  pages = "22 - 47",
+  year = "2007",
+  note = "",
+  issn = "1045-926X",
+  doi = "http://dx.doi.org/10.1016/j.jvlc.2006.03.002",
+  url = "http://www.sciencedirect.com/science/article/pii/S1045926X06000140",
+  author = "Christopher D. Hundhausen and Jonathan L. Brown",
+  keywords = "Algorithm visualization",
+  keywords = "Novice programming environments",
+  keywords = "Live programming environments",
+  keywords = "Usability studies",
+  keywords = "Field studies"
+}
+
+@article{Hundhausen2002,
+ author = {Hundhausen, Christopher D.},
+ title = {Integrating Algorithm Visualization Technology into an Undergraduate Algorithms Course: Ethnographic Studies of a Social Constructivist Approach},
+ journal = {Comput. Educ.},
+ issue_date = {November 2002},
+ volume = {39},
+ number = {3},
+ month = nov,
+ year = {2002},
+ issn = {0360-1315},
+ pages = {237--260},
+ numpages = {24},
+ url = {https://doi.org/10.1016/S0360-1315(02)00044-1},
+ doi = {10.1016/S0360-1315(02)00044-1},
+ acmid = {635714},
+ publisher = {Elsevier Science Ltd.},
+ address = {Oxford, UK, UK},
+ keywords = {cooperative/collaborative learning, evaluation of CAL systems, pedagogical issues, simulations, teaching/learning strategies},
+}
+
+@conference{Vickers1996,
+  title = {{CAITLIN}: A Musical Program Auralisation Tool to Assist Novice Programmers with Debugging},
+  booktitle = {Proceedings of the Third International Conference on Auditory Display, ICAD{\textquoteright}96},
+  year = {1996},
+  pages = {17{\textendash}24},
+  address = {Palo Alto, California, United States},
+  author = {Paul Vickers and James Alty}
+}
+
+@inproceedings{Byckling2005,
+ author = {Byckling, Pauli and Gerdt, Petri and Sajaniemi, Jorma},
+ title = {Roles of Variables in Object-oriented Programming},
+ booktitle = {Companion to the 20th Annual ACM SIGPLAN Conference on Object-oriented Programming, Systems, Languages, and Applications},
+ series = {OOPSLA '05},
+ year = {2005},
+ isbn = {1-59593-193-7},
+ location = {San Diego, CA, USA},
+ pages = {350--355},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1094855.1094972},
+ doi = {10.1145/1094855.1094972},
+ acmid = {1094972},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {computer science education, object-oriented programming, roles of variables},
+}
+
+@inproceedings{Burnett1998,
+ author = {Burnett, Margaret M. and Atwood Jr, John W. and Welch, Zachary T.},
+ title = {Implementing Level 4 Liveness in Declarative Visual Programming Languages},
+ booktitle = {Proceedings of the IEEE Symposium on Visual Languages},
+ series = {VL '98},
+ year = {1998},
+ isbn = {0-8186-8712-6},
+ pages = {126--},
+ url = {http://dl.acm.org/citation.cfm?id=832279.834482},
+ acmid = {834482},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+}
+
+@INPROCEEDINGS{Biegel2015, 
+  author={Benjamin Biegel and Benedikt Lesch and Stephan Diehl}, 
+  booktitle={2015 IEEE International Conference on Software Maintenance and Evolution (ICSME)}, 
+  title={Live object exploration: Observing and manipulating behavior and state of Java objects}, 
+  year={2015}, 
+  pages={581-585}, 
+  keywords={Java;data visualisation;programming environments;source code (software);Java object visual representation;integrated development environment;live object exploration;source code;touch-enabled Web application;Java;Navigation;Programming;Prototypes;Runtime;Testing;Visualization}, 
+  doi={10.1109/ICSM.2015.7332518}, 
+  month={Sept},
+}
+
+@misc{LiveProgHistory,
+  title = {A History of Live Programming},
+  howpublished = {\url{http://liveprogramming.github.io/liveblog/2013/01/a-history-of-live-programming/}},
+  year = 2013,
+  month = Jan,
+}
+
+@article{Pea1986,
+  author = {Roy D. Pea},
+  title = {Language-Independent Conceptual ``Bugs" in Novice Programming},
+  journal = {Journal of Educational Computing Research},
+  volume = {2},
+  number = {1},
+  pages = {25-36},
+  year = {1986},
+  doi = {10.2190/689T-1R2A-X4W4-29J2},
+
+  URL = { 
+          http://dx.doi.org/10.2190/689T-1R2A-X4W4-29J2
+      
+  },
+  eprint = { 
+          http://dx.doi.org/10.2190/689T-1R2A-X4W4-29J2
+      
+  }
+  ,
+}
+
+@article{Chi1989,
+  author = {Chi, Michelene T.H. and Bassok, Miriam and Lewis, Matthew W. and Reimann, Peter and Glaser, Robert},
+  title = {Self-Explanations: How Students Study and Use Examples in Learning to Solve Problems},
+  journal = {Cognitive Science},
+  volume = {13},
+  number = {2},
+  publisher = {Lawrence Erlbaum Associates, Inc.},
+  issn = {1551-6709},
+  url = {http://dx.doi.org/10.1207/s15516709cog1302_1},
+  doi = {10.1207/s15516709cog1302_1},
+  pages = {145--182},
+  year = {1989},
+}
+
+@article{Chi1994,
+  author = {Chi, Michelene T.H. and De Leeuw, Nicholas and Chiu, Mei-Hung and Lavancher, Christian},
+  title = {Eliciting Self-Explanations Improves Understanding},
+  journal = {Cognitive Science},
+  volume = {18},
+  number = {3},
+  publisher = {Lawrence Erlbaum Associates, Inc.},
+  issn = {1551-6709},
+  url = {http://dx.doi.org/10.1207/s15516709cog1803_3},
+  doi = {10.1207/s15516709cog1803_3},
+  pages = {439--477},
+  year = {1994},
+}
+
+@inproceedings{Malmi2004,
+  author = {Lauri Malmi and Ville Karavirta and Ari Korhonen and Jussi Nikander and Otto Seppälä and Panu Silvasti},
+  title = {Visual Algorithm Simulation Exercise System with Automatic Assessment: TRAKLA2},
+  booktitle = {Informatics in Education},
+  year = {2004},
+  pages = {048}
+}
+
+@article{Shaffer2010,
+ author = {Shaffer, Clifford A. and Cooper, Matthew L. and Alon, Alexander Joel D. and Akbar, Monika and Stewart, Michael and Ponce, Sean and Edwards, Stephen H.},
+ title = {Algorithm Visualization: The State of the Field},
+ journal = {Trans. Comput. Educ.},
+ issue_date = {August 2010},
+ volume = {10},
+ number = {3},
+ month = aug,
+ year = {2010},
+ issn = {1946-6226},
+ pages = {9:1--9:22},
+ articleno = {9},
+ numpages = {22},
+ url = {http://doi.acm.org/10.1145/1821996.1821997},
+ doi = {10.1145/1821996.1821997},
+ acmid = {1821997},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {AlgoViz Wiki, Algorithm animation, algorithm visualization, community, data structure visualization, free and open source software},
+}
+
+@article{Hundhausen2002meta,
+  title = "A Meta-Study of Algorithm Visualization Effectiveness",
+  journal = "Journal of Visual Languages \& Computing",
+  volume = "13",
+  number = "3",
+  pages = "259 - 290",
+  year = "2002",
+  note = "",
+  issn = "1045-926X",
+  doi = "http://dx.doi.org/10.1006/jvlc.2002.0237",
+  url = "http://www.sciencedirect.com/science/article/pii/S1045926X02902375",
+  author = "Christopher D. Hundhausen and Sarah A. Douglas and John T. Stasko",
+  keywords = "Algorithm visualization",
+  keywords = "Software visualization",
+  keywords = "Empirical studies of effectiveness",
+  keywords = "Literature reviews",
+  keywords = "Meta-analysis"
+}
+
+@inproceedings{Ko2004,
+ author = {Ko, Andrew J. and Myers, Brad A. and Aung, Htet Htet},
+ title = {Six Learning Barriers in End-User Programming Systems},
+ booktitle = {Proceedings of the 2004 IEEE Symposium on Visual Languages - Human Centric Computing},
+ series = {VLHCC '04},
+ year = {2004},
+ isbn = {0-7803-8696-5},
+ pages = {199--206},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/VLHCC.2004.47},
+ doi = {10.1109/VLHCC.2004.47},
+ acmid = {1034570},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+}
+
+@inproceedings{Kraemer2014,
+ author = {Kr{\"a}mer, Jan-Peter and Kurz, Joachim and Karrer, Thorsten and Borchers, Jan},
+ title = {How live coding affects developers' coding behavior},
+ booktitle = {Proceedings of the 2014 IEEE Symposium on Visual Languages - Human Centric Computing},
+ series = {VLHCC '14},
+ year = {2014},
+ pages = {5--8},
+ numpages = {4},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA}
+}
+
+@inproceedings{BenAri2004,
+ author = {Ben-Ari, Mordechai and Sajaniemi, Jorma},
+ title = {Roles of Variables As Seen by CS Educators},
+ booktitle = {Proceedings of the 9th Annual SIGCSE Conference on Innovation and Technology in Computer Science Education},
+ series = {ITiCSE '04},
+ year = {2004},
+ isbn = {1-58113-836-9},
+ location = {Leeds, United Kingdom},
+ pages = {52--56},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/1007996.1008013},
+ doi = {10.1145/1007996.1008013},
+ acmid = {1008013},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@inproceedings{Wilcox1997,
+ author = {Wilcox, E. M. and Atwood, J. W. and Burnett, M. M. and Cadiz, J. J. and Cook, C. R.},
+ title = {Does Continuous Visual Feedback Aid Debugging in Direct-manipulation Programming Systems?},
+ booktitle = {Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '97},
+ year = {1997},
+ isbn = {0-89791-802-9},
+ location = {Atlanta, Georgia, USA},
+ pages = {258--265},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/258549.258721},
+ doi = {10.1145/258549.258721},
+ acmid = {258721},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {debugging, direct manipulation, empirical study, end-user programming, liveness, spreadsheets, visual programming languages},
+}
+
+@inproceedings{Tanimoto2013,
+  author={Steven L. Tanimoto}, 
+  booktitle={2013 1st International Workshop on Live Programming (LIVE)}, 
+  title={A perspective on the evolution of live programming}, 
+  year={2013}, 
+  pages={31-34}, 
+  doi={10.1109/LIVE.2013.6617346}, 
+  month={May},
+}
+
+@inproceedings{Orso2003,
+ author = {Orso, Alessandro and Jones, James and Harrold, Mary Jean},
+ title = {Visualization of Program-execution Data for Deployed Software},
+ booktitle = {Proceedings of the 2003 ACM Symposium on Software Visualization},
+ series = {SoftVis '03},
+ year = {2003},
+ isbn = {1-58113-642-0},
+ location = {San Diego, California},
+ pages = {67--ff},
+ url = {http://doi.acm.org/10.1145/774833.774843},
+ doi = {10.1145/774833.774843},
+ acmid = {774843},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Gamma technology, remote monitoring, software visualization},
+}
+
+@inproceedings{Saff2004,
+ author = {Saff, David and Ernst, Michael D.},
+ title = {An Experimental Evaluation of Continuous Testing During Development},
+ booktitle = {Proceedings of the 2004 ACM SIGSOFT International Symposium on Software Testing and Analysis},
+ series = {ISSTA '04},
+ year = {2004},
+ isbn = {1-58113-820-2},
+ location = {Boston, Massachusetts, USA},
+ pages = {76--85},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1007512.1007523},
+ doi = {10.1145/1007512.1007523},
+ acmid = {1007523},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {continuous compilation, continuous testing, test-first development, unit testing},
+}
+
+@article{Sorva2013survey,
+ author = {Sorva, Juha and Karavirta, Ville and Malmi, Lauri},
+ title = {A Review of Generic Program Visualization Systems for Introductory Programming Education},
+ journal = {Trans. Comput. Educ.},
+ issue_date = {November 2013},
+ volume = {13},
+ number = {4},
+ month = nov,
+ year = {2013},
+ issn = {1946-6226},
+ pages = {15:1--15:64},
+ articleno = {15},
+ numpages = {64},
+ url = {http://doi.acm.org/10.1145/2490822},
+ doi = {10.1145/2490822},
+ acmid = {2490822},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {CS1, Introductory programming education, engagement taxonomy, literature review, notional machine, program dynamics, program visualization, software visualization},
+}
+
+@misc{LightTable,
+  author = {Chris Granger},
+  title = {Light Table: The next generation code editor},
+  howpublished = {\url{http://lighttable.com/}},
+  year = 2017,
+  month = Jul,
+}
