--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -2957,15 +2957,8 @@ keywords = "Survey "
   year = {1986},
   doi = {10.2190/689T-1R2A-X4W4-29J2},
 
-  URL = { 
-          http://dx.doi.org/10.2190/689T-1R2A-X4W4-29J2
-      
-  },
-  eprint = { 
-          http://dx.doi.org/10.2190/689T-1R2A-X4W4-29J2
-      
-  }
-  ,
+  URL = {http://dx.doi.org/10.2190/689T-1R2A-X4W4-29J2},
+  eprint = {http://dx.doi.org/10.2190/689T-1R2A-X4W4-29J2},
 }
 
 @article{Chi1989,
