--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -1324,6 +1324,24 @@ doi="10.1007/978-3-540-76298-0_18",
 url="http://dx.doi.org/10.1007/978-3-540-76298-0_18"
 }
 
+@inproceedings{Dontcheva2006,
+ author = {Dontcheva, Mira and Drucker, Steven M. and Wade, Geraldine and Salesin, David and Cohen, Michael F.},
+ title = {Summarizing Personal Web Browsing Sessions},
+ booktitle = {Proceedings of the 19th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '06},
+ year = {2006},
+ isbn = {1-59593-313-1},
+ location = {Montreux, Switzerland},
+ pages = {115--124},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1166253.1166273},
+ doi = {10.1145/1166253.1166273},
+ acmid = {1166273},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {information management, template-based summarization, webpage extraction patterns},
+}
+
 @inproceedings{Dontcheva2007,
  author = {Dontcheva, Mira and Drucker, Steven M. and Salesin, David and Cohen, Michael F.},
  title = {Relations, Cards, and Search Templates: User-guided Web Data Integration and Layout},
