--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3191,3 +3191,39 @@ keywords = "Survey "
   year = 2017,
   month = Jul,
 }
+
+@inproceedings{Little2007,
+ author = {Little, Greg and Lau, Tessa A. and Cypher, Allen and Lin, James and Haber, Eben M. and Kandogan, Eser},
+ title = {Koala: Capture, Share, Automate, Personalize Business Processes on the Web},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '07},
+ year = {2007},
+ isbn = {978-1-59593-593-9},
+ location = {San Jose, California, USA},
+ pages = {943--946},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1240624.1240767},
+ doi = {10.1145/1240624.1240767},
+ acmid = {1240767},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Wiki, automation, end-user programming, programming by demonstration},
+}
+
+@inproceedings{BrandtOpportunisticCHI2009,
+ author = {Brandt, Joel and Guo, Philip J. and Lewenstein, Joel and Dontcheva, Mira and Klemmer, Scott R.},
+ title = {Two Studies of Opportunistic Programming: Interleaving Web Foraging, Learning, and Writing Code},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '09},
+ year = {2009},
+ isbn = {978-1-60558-246-7},
+ location = {Boston, MA, USA},
+ pages = {1589--1598},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1518701.1518944},
+ doi = {10.1145/1518701.1518944},
+ acmid = {1518944},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {copy-and-paste, opportunistic programming, prototyping},
+}
