--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3227,3 +3227,24 @@ keywords = "Survey "
  address = {New York, NY, USA},
  keywords = {copy-and-paste, opportunistic programming, prototyping},
 }
+
+@article{Spicer2012,
+ author = {Spicer, Ryan and Lin, Yu-Ru and Kelliher, Aisling and Sundaram, Hari},
+ title = {NextSlidePlease: Authoring and Delivering Agile Multimedia Presentations},
+ journal = {ACM Trans. Multimedia Comput. Commun. Appl.},
+ issue_date = {November 2012},
+ volume = {8},
+ number = {4},
+ month = nov,
+ year = {2012},
+ issn = {1551-6857},
+ pages = {53:1--53:20},
+ articleno = {53},
+ numpages = {20},
+ url = {http://doi.acm.org/10.1145/2379790.2379795},
+ doi = {10.1145/2379790.2379795},
+ acmid = {2379795},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Presentations, authoring, slideware},
+}
