--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3248,3 +3248,10 @@ keywords = "Survey "
  address = {New York, NY, USA},
  keywords = {Presentations, authoring, slideware},
 }
+
+@misc{Wilson2018,
+  author = {Greg Wilson},
+  title = {How to Teach Programming (and Other Things): Live Coding},
+  howpublished = {\url{http://third-bit.com/teaching/live.html}},
+  year = 2018,
+}
