--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3255,3 +3255,29 @@ keywords = "Survey "
   howpublished = {\url{http://third-bit.com/teaching/live.html}},
   year = 2018,
 }
+
+@inproceedings{ChilanaCHI2016,
+ author = {Chilana, Parmit K. and Singh, Rishabh and Guo, Philip J.},
+ title = {Understanding Conversational Programmers: A Perspective from the Software Industry},
+ booktitle = {Proceedings of the 2016 CHI Conference on Human Factors in Computing Systems},
+ series = {CHI '16},
+ year = {2016},
+ isbn = {978-1-4503-3362-7},
+ location = {Santa Clara, California, USA},
+ pages = {1462--1472},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/2858036.2858323},
+ doi = {10.1145/2858036.2858323},
+ acmid = {2858323},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {conversational programmers, non-CS majors, programming literacy, technical conversations},
+}
+
+@inproceedings{WangCHI2018,
+ author = {Wang, April Y. and Mitts, Ryan and Guo, Philip J. and Chilana, Parmit K.},
+ title = {Mismatch of Expectations: How Modern Learning Resources Fail Conversational Programmers},
+ booktitle = {Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems},
+ series = {CHI '18},
+ year = {2018},
+}
