--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3281,3 +3281,21 @@ keywords = "Survey "
  series = {CHI '18},
  year = {2018},
 }
+
+@inproceedings{WarnerCHI2017,
+ author = {Warner, Jeremy and Guo, Philip J.},
+ title = {CodePilot: Scaffolding End-to-End Collaborative Software Development for Novice Programmers},
+ booktitle = {Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems},
+ series = {CHI '17},
+ year = {2017},
+ isbn = {978-1-4503-4655-9},
+ location = {Denver, Colorado, USA},
+ pages = {1136--1141},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/3025453.3025876},
+ doi = {10.1145/3025453.3025876},
+ acmid = {3025876},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {collaborative ide, novice programmers, pair programming},
+}
