--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3299,3 +3299,21 @@ keywords = "Survey "
  address = {New York, NY, USA},
  keywords = {collaborative ide, novice programmers, pair programming},
 }
+
+@inproceedings{McGrath2017,
+ author = {McGrath, Will and Drew, Daniel and Warner, Jeremy and Kazemitabaar, Majeed and Karchemsky, Mitchell and Mellis, David and Hartmann, Bj\"{o}rn},
+ title = {Bifr\"{o}st: Visualizing and Checking Behavior of Embedded Systems Across Hardware and Software},
+ booktitle = {Proceedings of the 30th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '17},
+ year = {2017},
+ isbn = {978-1-4503-4981-9},
+ location = {Qu\&\#233;bec City, QC, Canada},
+ pages = {299--310},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/3126594.3126658},
+ doi = {10.1145/3126594.3126658},
+ acmid = {3126658},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {IDE, debugging, embedded systems, visualization},
+}
