--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3317,3 +3317,21 @@ keywords = "Survey "
  address = {New York, NY, USA},
  keywords = {IDE, debugging, embedded systems, visualization},
 }
+
+@inproceedings{Bederson1994,
+ author = {Bederson, Benjamin B. and Hollan, James D.},
+ title = {Pad++: A Zooming Graphical Interface for Exploring Alternate Interface Physics},
+ booktitle = {Proceedings of the 7th Annual ACM Symposium on User Interface Software and Technology},
+ series = {UIST '94},
+ year = {1994},
+ isbn = {0-89791-657-3},
+ location = {Marina del Rey, California, USA},
+ pages = {17--26},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/192426.192435},
+ doi = {10.1145/192426.192435},
+ acmid = {192435},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {authoring, hypertext, information navigation, information physics, information visualization, interactive user interfaces, multiscale interfaces, zooming interfaces},
+}
