--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3335,3 +3335,16 @@ keywords = "Survey "
  address = {New York, NY, USA},
  keywords = {authoring, hypertext, information navigation, information physics, information visualization, interactive user interfaces, multiscale interfaces, zooming interfaces},
 }
+
+@article{Hartmann2008,
+author={Hartmann, Bj\"{o}rn and Doorley, Scott and Klemmer, Scott R.},
+journal={IEEE Pervasive Computing},
+title={Hacking, Mashing, Gluing: Understanding Opportunistic Design},
+year={2008},
+volume={7},
+number={3},
+pages={46-54},
+keywords={Internet;hobby computing;ubiquitous computing;Web 2.0 programmers;hacking;mashing;opportunistic design;ubiquitous computing systems design;Acceleration;Computer crime;Computer hacking;Consumer electronics;Hardware;Mashups;Programming profession;Prototypes;Software prototyping;Ubiquitous computing;hardware hacking;mashups;opportunistic design;ubiquitous computing},
+doi={10.1109/MPRV.2008.54},
+ISSN={1536-1268}, 
+month={July},}
