--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -1940,12 +1940,6 @@ keywords = "Survey "
  address = {New York, NY, USA},
 }
 
-@misc{maxurllength,
-  title = {What is the maximum length of a URL in different browsers?},
-  howpublished = {\url{http://stackoverflow.com/questions/417142/what-is-the-maximum-length-of-a-url-} \url{in-different-browsers}},
-  year = 2017,
-}
-
 @misc{DSToolbox,
   title = {Coursera course: The Data Scientist's Toolbox },
   howpublished = {\url{https://www.coursera.org/learn/data-scientists-tools}},
@@ -3348,3 +3342,78 @@ keywords={Internet;hobby computing;ubiquitous computing;Web 2.0 programmers;hack
 doi={10.1109/MPRV.2008.54},
 ISSN={1536-1268}, 
 month={July},}
+
+@misc{Clemmons2015,
+  author = {Eric Clemmons},
+  title = {Javascript Fatigue},
+  howpublished = {\url{https://medium.com/@ericclemmons/javascript-fatigue-48d4011b6fc4}},
+  year = 2015,
+}
+
+@misc{Benitte2017,
+  author = {Rapha\"{e}l Benitte and Sacha Greif and Michael Rambeau},
+  title = {The State of JavaScript 2017},
+  howpublished = {\url{https://stateofjs.com/}},
+  year = 2017,
+}
+
+@misc{sharelatex,
+  title = {ShareLaTeX: LaTeX, Evolved The easy to use, online, collaborative LaTeX editor},
+  howpublished = {\url{https://www.sharelatex.com/}},
+  year = 2018,
+}
+
+@misc{p5js,
+  title = {p5.js},
+  howpublished = {\url{https://p5js.org/}},
+  year = 2018,
+}
+
+@misc{Nations2016,
+  author = {Daniel Nations},
+  title = {What is a Mashup? Exploring Web Mashups},
+  howpublished = {\url{https://www.lifewire.com/what-is-a-mashup-3486655}},
+  year = 2016,
+}
+
+@misc{selenium,
+  title = {Selenium - Web Browser Automation},
+  howpublished = {\url{https://www.seleniumhq.org/}},
+  year = 2018,
+}
+
+@misc{maxurllength,
+  title = {Maximum length for url in chrome browser},
+  howpublished = {\url{https://stackoverflow.com/questions/15090220/maximum-length-for-url-in-chrome-browser}},
+  year = 2017,
+}
+
+@misc{balsamiq,
+  title = {Balsamiq. Rapid, effective and fun wireframing software.},
+  howpublished = {\url{https://balsamiq.com/}},
+  year = 2018,
+}
+
+@misc{invision,
+  title = {InVision: Digital Product Design, Workflow \& Collaboration},
+  howpublished = {\url{https://www.invisionapp.com/}},
+  year = 2018,
+}
+
+@misc{sketch,
+  title = {Sketch - The digital design toolkit},
+  howpublished = {\url{https://www.sketchapp.com/}},
+  year = 2018,
+}
+
+@misc{firepad,
+  title = {Firepad: Open source collaborative code and text editing},
+  howpublished = {\url{https://firepad.io/}},
+  year = 2018,
+}
+
+@misc{paletton,
+  title = {Paletton - The Color Scheme Designer},
+  howpublished = {\url{http://paletton.com/}},
+  year = 2018,
+}
