--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3417,3 +3417,114 @@ month={July},}
   howpublished = {\url{http://paletton.com/}},
   year = 2018,
 }
+
+@misc{Savkin2016,
+  author = {Victor Savkin},
+  title = {Angular: Why TypeScript?},
+  howpublished = {\url{https://vsavkin.com/writing-angular-2-in-typescript-1fa77c78d8e8}},
+  year = 2016,
+}
+
+@misc{flask,
+  title = {Flask (A Python Microframework)},
+  howpublished = {\url{http://flask.pocoo.org/}},
+  year = 2018,
+}
+
+@inproceedings{Nathan2001,
+  title={Expert blind spot: When content knowledge eclipses pedagogical content knowledge},
+  author={Nathan, Mitchell J and Koedinger, Kenneth R and Alibali, Martha W},
+  booktitle={Proceedings of the third international conference on cognitive science},
+  pages={644--648},
+  year={2001},
+  organization={Beijing: University of Science and Technology of China Press}
+}
+
+@inproceedings{Graham1982,
+ author = {Graham, Susan L. and Kessler, Peter B. and Mckusick, Marshall K.},
+ title = {Gprof: A Call Graph Execution Profiler},
+ booktitle = {Proceedings of the 1982 SIGPLAN Symposium on Compiler Construction},
+ series = {SIGPLAN '82},
+ year = {1982},
+ isbn = {0-89791-074-5},
+ location = {Boston, Massachusetts, USA},
+ pages = {120--126},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/800230.806987},
+ doi = {10.1145/800230.806987},
+ acmid = {806987},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@inproceedings{Srivastava1994,
+ author = {Srivastava, Amitabh and Eustace, Alan},
+ title = {ATOM: A System for Building Customized Program Analysis Tools},
+ booktitle = {Proceedings of the ACM SIGPLAN 1994 Conference on Programming Language Design and Implementation},
+ series = {PLDI '94},
+ year = {1994},
+ isbn = {0-89791-662-X},
+ location = {Orlando, Florida, USA},
+ pages = {196--205},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/178243.178260},
+ doi = {10.1145/178243.178260},
+ acmid = {178260},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@book{Pirolli2007,
+ author = {Pirolli, Peter L. T.},
+ title = {Information Foraging Theory: Adaptive Interaction with Information},
+ year = {2007},
+ isbn = {0195173325, 9780195173321},
+ edition = {1},
+ publisher = {Oxford University Press, Inc.},
+ address = {New York, NY, USA},
+}
+
+@misc{dtrace4linux,
+  author = {Fox, Paul D.},
+  title = {Linux port of DTrace},
+  howpublished = {\url{https://github.com/dtrace4linux/linux}},
+  year = 2018,
+}
+
+@misc{procmon,
+  author = {Russinovich, Mark},
+  title = {Microsoft Sysinternals: Process Monitor v3.50},
+  howpublished = {\url{https://docs.microsoft.com/en-us/sysinternals/downloads/procmon}},
+  year = 2018,
+}
+
+@misc{mime,
+  title = {MDN web docs: MIME types},
+  howpublished = {\url{https://developer.mozilla.org/en-US/docs/Web/HTTP/Basics_of_HTTP/MIME_types}},
+  year = 2018,
+}
+
+
+@misc{tobii2011,
+  title = {Accuracy and precision test method for remote eye trackers},
+  howpublished = {\url{https://www.tobiipro.com/siteassets/tobii-pro/accuracy-and-precision-tests/tobii-accuracy-and-precisiontest-method-version-2-1-1.pdf}},
+  year = 2011,
+}
+
+@misc{fullstory,
+  title = {FullStory: Pixel-Perfect Session Replay},
+  howpublished = {\url{https://www.fullstory.com/}},
+  year = 2018,
+}
+
+@misc{hotjar,
+  title = {Hotjar: All-in-one Analytics \& Feedback},
+  howpublished = {\url{https://www.hotjar.com/}},
+  year = 2018,
+}
+
+@misc{mouseflow,
+  title = {Mouseflow - Session Replay, Heatmaps, Funnels, Forms \& User Feedback},
+  howpublished = {\url{https://mouseflow.com/}},
+  year = 2018,
+}
