--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3528,3 +3528,150 @@ month={July},}
   howpublished = {\url{https://mouseflow.com/}},
   year = 2018,
 }
+
+
+@misc{intellij,
+  title = {IntelliJ IDEA: The Java IDE for Professional Developers by JetBrains},
+  howpublished = {\url{https://www.jetbrains.com/idea/}},
+  year = 2018,
+}
+
+@misc{eclipse,
+  title = {Eclipse desktop \& web IDEs},
+  howpublished = {\url{https://www.eclipse.org/ide/}},
+  year = 2018,
+}
+
+@misc{vscode,
+  title = {Visual Studio Code - Code Editing. Redefined},
+  howpublished = {\url{https://code.visualstudio.com/}},
+  year = 2018,
+}
+
+@misc{Hinton2017,
+  author = {Hinton, Suz},
+  title = {Lessons from my first year of live coding on Twitch},
+  howpublished = {\url{https://medium.freecodecamp.org/lessons-from-my-first-year-of-live-coding-} \url{on-twitch-41a32e2f41c1}},
+  year = 2017,
+}
+
+@misc{redditwpc,
+  title = {Reddit: WatchPeopleCode},
+  howpublished = {\url{https://www.reddit.com/r/WatchPeopleCode/}},
+  year = 2018,
+}
+
+@misc{Rosenberg2015,
+  author = {Scott Rosenberg},
+  title = {The Strange Appeal of Watching Coders Code},
+  howpublished = {Backchannel: WIRED \url{https://www.wired.com/2015/08/the-strange-appeal-of-watching-coders-code/}},
+  year = 2015,
+}
+
+@article{Catrambone1998,
+  author = {Catrambone, Richard},
+  year = {1998},
+  month = {12},
+  pages = {355-376},
+  title = {The Subgoal Learning Model: Creating Better Examples so That Students Can Solve Novel Problems},
+  volume = {127},
+  booktitle = {Journal of Experimental Psychology: General}
+}
+
+@misc{atom,
+  title = {Atom IDE},
+  howpublished = {\url{https://ide.atom.io/}},
+  year = 2018,
+}
+
+@misc{revealjs,
+  title = {reveal.js - The HTML Presentation Framework},
+  howpublished = {\url{https://revealjs.com/}},
+  year = 2018,
+}
+
+@misc{meteorjs,
+  title = {Meteor: Build Apps with JavaScript},
+  howpublished = {\url{https://www.meteor.com/}},
+  year = 2018,
+}
+
+@misc{obs,
+  title = {Open Broadcaster Software},
+  howpublished = {\url{https://obsproject.com/}},
+  year = 2018,
+}
+
+@misc{vslive,
+  title = {Visual Studio Live Share: Real-time collaborative development},
+  howpublished = {\url{https://code.visualstudio.com/visual-studio-live-share}},
+  year = 2018,
+}
+
+@misc{cloud9,
+  title = {AWS Cloud9: A cloud IDE for writing, running, and debugging code},
+  howpublished = {\url{https://aws.amazon.com/cloud9/?origin=c9io}},
+  year = 2018,
+}
+
+@conference{Kluyver2016,
+	Author = {Thomas Kluyver and Benjamin Ragan-Kelley and Fernando P{\'e}rez and Brian Granger and Matthias Bussonnier and Jonathan Frederic and Kyle Kelley and Jessica Hamrick and Jason Grout and Sylvain Corlay and Paul Ivanov and Dami{\'a}n Avila and Safia Abdalla and Carol Willing},
+	Booktitle = {Positioning and Power in Academic Publishing: Players, Agents and Agendas},
+	Editor = {F. Loizides and B. Schmidt},
+	Organization = {IOS Press},
+	Pages = {87 - 90},
+	Title = {Jupyter Notebooks -- a publishing format for reproducible computational workflows},
+	Year = {2016}
+}
+
+@book{Mayer2009,
+ author = {Mayer, Richard E.},
+ title = {Multimedia Learning},
+ year = {2009},
+ isbn = {0521514126},
+ edition = {2nd},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+}
+
+@misc{waypoint,
+  title = {Waypoint (Wikipedia)},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Waypoint}},
+  year = 2018,
+}
+
+@inproceedings{Margulieux2012,
+ author = {Margulieux, Lauren E. and Guzdial, Mark and Catrambone, Richard},
+ title = {Subgoal-labeled Instructional Material Improves Performance and Transfer in Learning to Develop Mobile Applications},
+ booktitle = {Proceedings of the Ninth Annual International Conference on International Computing Education Research},
+ series = {ICER '12},
+ year = {2012},
+ isbn = {978-1-4503-1604-0},
+ location = {Auckland, New Zealand},
+ pages = {71--78},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2361276.2361291},
+ doi = {10.1145/2361276.2361291},
+ acmid = {2361291},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {cognitive load, educational videos, instructional text, mental models, subgoal learning},
+} 
+
+@inproceedings{Weir2015,
+ author = {Weir, Sarah and Kim, Juho and Gajos, Krzysztof Z. and Miller, Robert C.},
+ title = {Learnersourcing Subgoal Labels for How-to Videos},
+ booktitle = {Proceedings of the 18th ACM Conference on Computer Supported Cooperative Work \&\#38; Social Computing},
+ series = {CSCW '15},
+ year = {2015},
+ isbn = {978-1-4503-2922-4},
+ location = {Vancouver, BC, Canada},
+ pages = {405--416},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2675133.2675219},
+ doi = {10.1145/2675133.2675219},
+ acmid = {2675219},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {learnersourcing, subgoal labels, video learning},
+}
