--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3675,3 +3675,28 @@ month={July},}
  address = {New York, NY, USA},
  keywords = {learnersourcing, subgoal labels, video learning},
 }
+
+@misc{replit,
+  title = {repl.it - Online REPL, Compiler \& IDE},
+  howpublished = {\url{https://repl.it/}},
+  year = 2018,
+}
+
+@misc{searchcode,
+  title = {searchcode: Search over 20 billion lines of code from 7,000,000 projects},
+  howpublished = {\url{https://searchcode.com/}},
+  year = 2018,
+}
+
+@misc{pythondocs,
+  title = {Python 3.6.5 documentation},
+  howpublished = {\url{https://docs.python.org/}},
+  year = 2018,
+}
+
+@misc{arachnoid,
+  author = {Paul Lutus},
+  title = {Interactive LaTeX Editor},
+  howpublished = {\url{https://arachnoid.com/latex/}},
+  year = 2012,
+}
