--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3384,7 +3384,7 @@ month={July},}
 
 @misc{maxurllength,
   title = {Maximum length for url in chrome browser},
-  howpublished = {\url{https://stackoverflow.com/questions/15090220/maximum-length-for-url-in-chrome-browser}},
+  howpublished = {\url{https://stackoverflow.com/questions/15090220/maximum-length-for-url-in-chrome-browser/25383986#25383986}},
   year = 2017,
 }
 
