--- a/pgbovine.bib
+++ b/pgbovine.bib
@@ -3700,3 +3700,21 @@ month={July},}
   howpublished = {\url{https://arachnoid.com/latex/}},
   year = 2012,
 }
+
+@misc{ableton,
+  title = {Ableton: Music production with Live and Push},
+  howpublished = {\url{https://www.ableton.com/en/}},
+  year = 2018,
+}
+
+@misc{wireshark,
+  title = {Wireshark - Go Deep},
+  howpublished = {\url{https://www.wireshark.org/}},
+  year = 2018,
+}
+
+@misc{rift,
+  title = {Oculus Rift - Oculus},
+  howpublished = {\url{https://www.oculus.com/rift/}},
+  year = 2018,
+}
